# pq2

./: .gitignore  CMakeLists.txt  README.md  commandline.cpp  commandline.h  commandlineexeptions.cpp  commandlineexeptions.h  commandlineoptions.cpp  config.h.in  main.cpp
.github/workflows/: cmake_linux_clang.yml  cmake_linux_gcc.yml  cmake_macos.yml  cmake_windows.yml
cocoa/: CMakeLists.txt  cocoacharatercreator.h  cocoacharatercreator.mm  cocoamainmenu.h  cocoamainmenu.mm  mainmenu.xib  pq2cocoa.h  pq2cocoa.mm
game/: CMakeLists.txt  armors.cpp  armors.h  armors.hpp  boringitems.cpp  boringitems.h  boringitems.hpp  character.cpp  character.h  character.hpp  classes.cpp  classes.h  classes.hpp  defensiveattributes.cpp  defensiveattributes.h  defensiveattributes.hpp  game.cpp  game.h  game.hpp  itemattributes.cpp  itemattributes.h  itemattributes.hpp  itemofs.cpp  itemofs.h  itemofs.hpp  jsonserialiser.cpp  jsonserialiser.h  jsonserialiser.hpp  monstermods.cpp  monstermods.h  monstermods.hpp  monsters.cpp  monsters.h  monsters.hpp  newgame.cpp  newgame.h  newgame.hpp  offensiveattributes.cpp  offensiveattributes.h  offensiveattributes.hpp  (+20 more)
gtk/: CMakeLists.txt  charactercreator.cpp  charactercreator.hpp  gamescreen.cpp  gamescreen.hpp  gtkview.cpp  gtkview.hpp  mainmenu.cpp  mainmenu.hpp  pq2gtk.cpp  pq2gtk.hpp  resources.xml  style.css
gui/: CMakeLists.txt  pq2gui.cpp  pq2gui.h  pq2gui.hpp  view.cpp  view.h  view.hpp
mac/: CMakeLists.txt  cocoacharatercreator.hpp  cocoacharatercreator.mm  cocoamainmenu.hpp  cocoamainmenu.mm  pq2mac.hpp  pq2mac.mm
ncurses/: CMakeLists.txt  charactercreator.cpp  charactercreator.h  charactercreator.hpp  gamescreen.cpp  gamescreen.hpp  loadscreen.cpp  loadscreen.hpp  mainmenu.cpp  mainmenu.h  mainmenu.hpp  ncursesview.cpp  ncursesview.h  ncursesview.hpp  nview.cpp  nview.h  pq2ncurses.cpp  pq2ncurses.h  pq2ncurses.hpp  view.cpp  view.h
qt/: CMakeLists.txt  pq2qt.cpp  pq2qt.h  pq2qt.hpp  qtcharatercreator.cpp  qtcharatercreator.h  qtcharatercreator.hpp  qtgamescreen.cpp  qtgamescreen.h  qtgamescreen.hpp  qtmainmenu.cpp  qtmainmenu.h  qtmainmenu.hpp  resources.qrc
utils/: CMakeLists.txt  commandline.cpp  commandline.h  commandline.hpp  commandlineexeptions.cpp  commandlineexeptions.h  commandlineexeptions.hpp  commandlineoptions.cpp  commandlineoptions.h  commandlineoptions.hpp  namegenerator.cpp  namegenerator.h  namegenerator.hpp  plural.cpp  plural.hpp  romannumerals.cpp  romannumerals.h  romannumerals.hpp  signals.cpp  signals.h  signals.hpp  utils.h  utils.hpp
